--- a/feed.html
+++ b/feed.html
@@ -1186,7 +1186,7 @@
                       />
                     </div>
                     <div>
-                      <p class="fs-7 m-0">Tony</p>
+                      <p class="fs-7 m-0">Shivam</p>
                       <span class="fs-7 text-muted"
                         >Lorem ipsum &#8226; 7d</span
                       >
@@ -2772,7 +2772,7 @@
               </div>
               <!-- name -->
               <div>
-                <p class="m-0">Tony <i class="fas fa-angle-down"></i></p>
+                <p class="m-0">Shivam <i class="fas fa-angle-down"></i></p>
                 <span class="text-muted fs-7">Active Now</span>
               </div>
             </div>
@@ -5633,7 +5633,7 @@
                                 <img src="https://source.unsplash.com/random/4" alt="avatar" class="pop-avatar"  />
                               </div>
                               <div >
-                                <h5>Tony</h5>
+                                <h5>Shivam</h5>
                                 <div class="d-flex">
                                   <i class="fas fa-user-friends m-1 text-muted"></i>
                                   <p>2 mutual friends: <span class="fw-bold">Lakshay</span> and <span class="fw-bold">Mukesh</span></p>
@@ -5670,7 +5670,7 @@
                       <span class="visually-hidden"></span>
                     </span>
                   </div>
-                  <p class="m-0">Tony</p>
+                  <p class="m-0">Shivam</p>
                 </div>
               </li>
               <!-- friend 5 -->
@@ -5943,7 +5943,7 @@
                                               <img src="https://source.unsplash.com/random/4" alt="avatar" class="pop-avatar"  />
                                             </div>
                                             <div >
-                                              <h5>Tony</h5>
+                                              <h5>Shivam</h5>
                                               <div class="d-flex">
                                                 <i class="fas fa-user-friends m-1 text-muted"></i>
                                                 <p>2 mutual friends: <span class="fw-bold">Lakshay</span> and <span class="fw-bold">Mukesh</span></p>
@@ -5980,7 +5980,7 @@
                       <span class="visually-hidden"></span>
                     </span>
                   </div>
-                  <p class="m-0">Tony</p>
+                  <p class="m-0">Shivam</p>
                 </div>
               </li>
               <!-- friend 10 -->
@@ -6253,7 +6253,7 @@
                                 <img src="https://source.unsplash.com/random/4" alt="avatar" class="pop-avatar"  />
                               </div>
                               <div >
-                                <h5>Tony</h5>
+                                <h5>Shivam</h5>
                                 <div class="d-flex">
                                   <i class="fas fa-user-friends m-1 text-muted"></i>
                                   <p>2 mutual friends: <span class="fw-bold">Lakshay</span> and <span class="fw-bold">Mukesh</span></p>
@@ -6290,7 +6290,7 @@
                       <span class="visually-hidden"></span>
                     </span>
                   </div>
-                  <p class="m-0">Tony</p>
+                  <p class="m-0">Shivam</p>
                 </div>
               </li>
               <!-- friend 15 -->
