--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
         <!-- tag -->
         <div class="my-5 pb-5 text-center">
-          <p class="fw-bold"><a href="#" class="text-decoration-none text-dark">Createa a Page</a> <span class="fw-normal">for a celebrity, band or business.</span></p>
+          <p class="fw-bold"><a href="#" class="text-decoration-none text-dark">Just a UI clone</a> <span class="fw-normal"> : No Real Login/Password Required</span></p>
         </div>
       </div>
     </div>
